# ire26

./: .env.example  .gitignore  METHODOLOGY.md  README.md  index.html  main.js  pyproject.toml  styles.css
.github/workflows/: bettingpros_scraper.yml  draftkings_scraper.yml  espn_schedule_scraper.yml  rotowire_public_data_scraper.yml  rotowire_subscription_data_downloader.yml  scrape_draftkings_game_view.yml
analysis/: eligibility.Rmd  props.Rmd
config/: README.md  requirements.txt  setup.sh
data/eligibility/: eligibility_age_by_state.csv  eligible_population_by_state.csv
data/sample/: README.md  cleaned_props_duke_siena.csv  raw_bettingpros_duke_siena.csv  raw_box_scores_duke_siena.csv  raw_rotowire_public_duke_siena.csv
sample_analysis/: index.html  sample_analysis.Rmd  sample_analysis.ipynb
sample_analysis/sample_data/: README.md  raw_espn_schedule_duke_siena.csv  raw_rotowire_public_data_duke_siena.csv  raw_rotowire_subscription_data_duke_siena.csv
scrapers/: bettingpros_scraper.py  draftkings_props_by_game_scraper.py  draftkings_scraper.py  espn_schedule_scraper.py  march_madness_box_scores_scraper.py  roster_scraper.py  rotowire_public_data_scraper.py  rotowire_subscription_data_downloader.py
