[project]
name = "props"
version = "0.1.0"
description = "College Basketball Props Scraping and Analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "selenium>=4.15.0",
    "pandas>=2.0.0",
    "schedule>=1.2.0",
    "webdriver-manager>=4.0.0",
    "datasette>=0.65.0",
    "sqlite-utils>=3.38",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scrapers"]
